# science-swarm-hub

./: .gitignore  CONTRIBUTING.md  INTERFACE.md  LICENSE  ModLog.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  RUNBOOK.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  proposal.md  task.md
.github/workflows/: test.yml
contracts/: contracts.py
data/pqn_swarm_hub/contributions/: 110296e781310f90.json  136af33e5bda8b81.json  1fc78afe704ce6d5.json  2a707db732f6c6a9.json  31881640a17dc30a.json  443037a763dacdda.json  5bd7e78f8628ac48.json  68bfb652e772284d.json  914fc30993ca1ac2.json  97935141bbcc21be.json  c7c3d8e4ea27e6f8.json  cb22b731ec2da46d.json
docs/: ARCHITECTURE.md  DUAL_REMOTE_PLAN.md  EXFOLIATION_CHECKLIST.md  EXFOLIATION_PLAN.md  MIGRATION_MANIFEST.md  ONBOARDING.md  README.md
docs/architecture/: DISCORD_BLUEPRINT.md  FOUNDUPS_ARCHITECTURE.md  FOUNDUP_TEMPLATE.md  SCIENCE_SWARM_EMBED_CHECKLIST.md
docs/seed_issues/: 001_update_tests_readme.md  002_add_dev_setup_section.md
examples/: workflow_example.py
src/pqn_swarm_hub/: __init__.py  contracts.py  contribution.py  detector_bridge.py  fam_adapter.py  gate.py  persistence.py  publication_adapter.py  registry.py  submission_sink.py  verification.py
tests/: README.md  TestModLog.md  __init__.py  test_contracts.py  test_detector_bridge.py  test_external_contributor.py  test_external_submission.py  test_fam_live_validation.py  test_persistence.py  test_poc_flow.py  test_publication_adapter.py
